Add seed user marker
